--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
   "require": {
     "php": ">=5.3.3",
     "qandidate/toggle": "0.1.*"
+  },
+  "autoload": {
+    "psr-4": {"Polisys\QandidateToggleExtras\\": "polisys/qandidate-toggle-extras/"}
   }
 }
