--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,6 @@
     "qandidate/toggle": "0.1.*"
   },
   "autoload": {
-    "psr-4": {"Polisys\QandidateToggleExtras\\": "polisys/qandidate-toggle-extras/"}
+    "psr-4": {"Polisys\\QandidateToggleExtras\\": "polisys/qandidate-toggle-extras/"}
   }
 }
